# pulumi-resources

./: README.md
basic_account_setup/: Pulumi.dev.yaml  Pulumi.yaml  README.md  main.py  pyproject.toml
