[tool.poetry]
name = "pulumi-aws-infrastructure"
version = "0.1.0"
description = "AWS infrastructure provisioning with Pulumi"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.0.0"
pulumi-aws = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"